# celebration

./: .gitignore  README.md  docker-compose.yml  package.json  reset_db.ps1
api/: Dockerfile  README.md  pyproject.toml  recreate_db.py  requirements.txt  run_recreate_db.py  setup.py  test_output.txt
api/app/: main.py
api/app/api/endpoints/: events.py
api/app/core/: config.py
api/app/db/: base.py  recreate_db.py  session.py
api/app/models/: event.py
api/app/schemas/: event.py
api/app/services/: event_service.py
api/tests/: conftest.py  test_event_creation.py
app/: Dockerfile  README.md  angular.json  package.json
app/src/: index.html  styles.scss
app/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.config.ts  app.module.ts
app/src/app/components/calendar/: calendar.component.html  calendar.component.scss  calendar.component.ts
app/src/app/components/confirm-dialog/: confirm-dialog.component.ts
app/src/app/components/event-dialog/: event-dialog.component.html  event-dialog.component.scss  event-dialog.component.ts
app/src/app/components/sidenav/: sidenav.component.html  sidenav.component.scss  sidenav.component.ts
app/src/app/models/: event.model.ts
app/src/app/services/: event-validation.service.ts  event.service.ts
app/src/environments/: environment.prod.ts
